language-plutus-core/test/type-errors/wrapType.plc
(program 0.1.0
  (wrap list
      (all r (type) (fun r (fun (fun [(con integer) (con 64)] (fun list r)) r)))
      (con 64 ! 0)
  )
)
